Метод .of [#70623 #8911] fix1